@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4TrajectoryPoint.cc,v 1.7 2002-09-04 02:09:38 asaim Exp $
+// $Id: G4TrajectoryPoint.cc,v 1.8 2002-10-16 11:38:38 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -54,6 +54,8 @@ G4TrajectoryPoint::~G4TrajectoryPoint()
 {
 }
 
-const G4AttValueList* G4TrajectoryPoint::GetAttValues() const
-{ return 0; }
+const G4std::vector<G4AttDef>* G4TrajectoryPoint::GetAttDefs() const
+{ return 0; }  // Empty for now.
 
+G4std::vector<G4AttValue>* G4TrajectoryPoint::GetAttValues() const
+{ return 0; }  // Empty for now.
