@@ -1,4 +1,4 @@
-$Id: History,v 1.37 2002-09-04 02:09:35 asaim Exp $
+$Id: History,v 1.38 2002-10-16 11:38:35 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 16, 02 J.Allison (traj01)
+- Added GetAttDefs to G4VTrajectory, etc., and small corrections.
 
 Sep 03, 02 M.Asai
 - Start working for trajectory related issues
